Fixed extra spacing between date and description.

--- a/docroot/sites/registrar.uiowa.edu/modules/registrar_core/css/academic_calendar.css
+++ b/docroot/sites/registrar.uiowa.edu/modules/registrar_core/css/academic_calendar.css
@@ -83,3 +83,7 @@
 span.badge {
   margin-top: 10px;
 }
+
+div.card__details {
+  margin-bottom: 4.8px;
+}
